@@ -3,7 +3,32 @@ if (!defined ('TYPO3_MODE')) {
 	die ('Access denied.');
 }
 
-$typoVersion = tx_div2007_core::getTypoVersion();
+$typoVersion = 0;
+
+if (class_exists('tx_div2007_core')) {
+	$typoVersion = tx_div2007_core::getTypoVersion();
+} else { // workaround for bug #55727
+	$result = FALSE;
+	$callingClassName = '\\TYPO3\\CMS\\Core\\Utility\\VersionNumberUtility';
+	if (
+		class_exists($callingClassName) &&
+		method_exists($callingClassName, 'convertVersionNumberToInteger')
+	) {
+		$result = call_user_func($callingClassName . '::convertVersionNumberToInteger', TYPO3_version);
+	} else if (
+		class_exists('t3lib_utility_VersionNumber') &&
+		method_exists('t3lib_utility_VersionNumber', 'convertVersionNumberToInteger')
+	) {
+		$result = t3lib_utility_VersionNumber::convertVersionNumberToInteger(TYPO3_version);
+	} else if (
+		class_exists('t3lib_div') &&
+		method_exists('t3lib_div', 'int_from_ver')
+	) {
+		$result = t3lib_div::int_from_ver(TYPO3_version);
+	}
+
+	$typoVersion = $result;
+}
 
 if (
 	TYPO3_MODE == 'BE' &&
