@@ -1,3 +1,6 @@
+2015-04-30 Franz Holzinger <franz@ttproducts.de>
+	* bug #65141: workaround for the EM in the TYPO3 backend
+
 2015-04-21 Franz Holzinger <franz@ttproducts.de>
 	* bug fix: wrong call for hook registrationProcess_beforeSaveDelete
 	* bug fix: the original internal array must never be changeable
